<resources>
    <string name="app_name">Sale Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="register_title">Register</string>
    <string name="login_title">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="server_address">Server Address</string>
    <string name="btnRegister">Register</string>
    <string name="welcome">Welcome</string>
    <string name="home_title">Home</string>
    <string name="sltv_title">Sản lượng Trưởng Vùng </string>
    <string name="sltt_title">Sản lượng Tiếp Thị </string>
    <string name="slkh_title">Sản lượng KH </string>
    <string name="slgd_title">Sản lượng Giám Đốc</string>
    <string name="report_option_title">Chọn loại report</string>
    <string name="member_name">Member\'s name</string>
    <string name="sltt_report_title">THỐNG KÊ TIÊU THỤ CỦA TIẾP THỊ</string>
    <string name="area_label" format="true">Khu vực: %s</string>
    <string name="time_label" >Từ ngày:&#160;</string>
    <string name="time_year_label" >Từ năm:&#160;</string>
    <string name="connect_warning" >Please connect Internet to login </string>
    <string name="change_pass">Change Password</string>
</resources>
